Fix z-index issue and update text alignment in index.html

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -679,7 +679,7 @@ color: var(--third-color);
   width: 100%;
   height: 100%;
   object-fit: cover;
-  /* z-index: -2; */
+  z-index: -2;
 }
 .picture-bg {
   position: absolute;
